# CText

./: .gitignore  AUTHORS  CMakeLists.txt  LoadingImage.c  Makefile  README  back-network.txt  button.c  ctext.nix  display.c  display.h  display_Image.c  get_image.c  grayscale.c  grayscale.h  layer.c  layer.h  main.c  method.h  methods.h  network.c  network.h  neuron.c  neuron.h  otsu.c  otsu.h  pixel_operations.c  pixel_operations.h  prePocessing.c  rotation.c  xor-trained-network.txt
.github/workflows/: main.yml
src/: main.c  preProcessing.c  preProcessing.h  preProcessingMat.c  preProcessingMat.h  rotation.c  rotation.h  util.c  util.h
src/assets/: ctext.nix  interface.glade
src/display/: display.c  display.h  pixel_operations.c  pixel_operations.h
src/libs/application/: app.h  application.c  application.h
src/libs/image_manipulation/: bradley.c  bradley.h  filter.c  filter.h  grayscale.c  grayscale.h  otsu.c  otsu.h  pixel_operations.c  pixel_operations.h  rotation.c  rotation.h  segmentation.c  segmentation.h
src/libs/list/: list.c  list.h
src/libs/list_manipulation/: index.c  index.h
src/libs/neural_network/: neuralnetwork.c  neuralnetwork.h  neuron.c  neuron.h  train.c  train.h
src/libs/string/: string.c  string.h
src/neuralnetwork/: function.c  function.h  layer.c  layer.h  main.c  neuron.c  neuron.h
src/preprocessing/: grayscale.c  grayscale.h  main.c  otsu.c  otsu.h
src/segmentation/: segmentation.c  segmentation.h
src/test/: main.c  test.c  test.h  test_method.c  test_method.h
